# nanogl

./: .gitignore  .gitmodules  CMakeLists.txt
components/font_render/: font_cache.c  font_render.c
components/font_render/include/: font_cache.h  font_render.h
components/nanogl/: CMakeLists.txt  nanogl.c  nanogl_widget_rectangle.c
components/nanogl/include/: nanogl.c  nanogl.h  nanogl_widget_rectangle.h
components/nanogl/include/nanogl/: rectangle.h
components/nanogl/widgets/: rectangle.c
components/st7789/: CMakeLists.txt  st7789.c  st7789_ngl_driver.c
components/st7789/include/: st7789.h  st7789_ngl_driver.h
linux/: CMakeLists.txt  data_file_embed_c.cmake  display.c  init.c  utilities.cmake
linux/font_render/: CMakeLists.txt
linux/include/: display.h
main/: CMakeLists.txt  Kconfig.projbuild  gui.c  gui.h  init.c  init.h  main.c  unicode.c
